--- a/challege-front/public/index.html
+++ b/challege-front/public/index.html
@@ -21,6 +21,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <!-- LIBRARY CHART -->
+
     <!-- FONTS -->
     <!-- RUBIK -->
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
